Fixed normalization visible

--- a/src/sass/components/main.scss
+++ b/src/sass/components/main.scss
@@ -181,7 +181,8 @@ body.platform--browser .normalization{
 	backdrop-filter: blur(5px);
 }
 
-body.platform--apple .normalization{
+body.platform--apple .normalization,
+body.selectbox--open .normalization{
 	display: none;
 }
 
